feat: add underline effect utility

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <h1>Registration form</h1>
     <form action="/" id="resgistration_form">
       <label for="username">User Name:</label>
-      <div>
+      <div class="underline">
         <input type="text" name="username" class="username" autocomplete="username" placeholder="Enter your user name" required>
       </div>
       <label for="email">Email:</label>
-      <div>
+      <div class="underline">
         <input type="text" name="email" class="email" autocomplete="email" placeholder="Enter your email address" required>
       </div>
       <label for="password">Password:</label>
-      <div>
+      <div class="underline">
         <input type="password" name="password" class="password" autocomplete="new-password" placeholder="Enter your password" required>
         <i id="visibility" class="noSelect">visibility</i>
       </div>
       <label for="confirm">Confirmation:</label>
-      <div>
+      <div class="underline">
         <input type="password" name="confirm" class="password" autocomplete="new-password" placeholder="Please confirm your password" required>
       </div>
       <div>
