--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <form action="/" id="resgistration_form">
       <label for="username">User Name:</label>
       <div class="underline">
-        <input type="text" name="username" class="username" autocomplete="username" placeholder="Enter your user name" required>
+        <input type="text" name="username" class="username" autocomplete="off" placeholder="Enter your user name" required>
       </div>
       <label for="email">Email:</label>
       <div class="underline">
-        <input type="text" name="email" class="email" autocomplete="email" placeholder="Enter your email address" required>
+        <input type="text" name="email" class="email" autocomplete="off" placeholder="Enter your email address" required>
       </div>
       <label for="password">Password:</label>
       <div class="underline">
-        <input type="password" name="password" class="password" autocomplete="new-password" placeholder="Enter your password" required>
+        <input type="password" name="password" class="password" autocomplete="off" placeholder="Enter your password" required>
         <i id="visibility" class="noSelect">visibility</i>
       </div>
       <label for="confirm">Confirmation:</label>
       <div class="underline">
-        <input type="password" name="confirm" class="password" autocomplete="new-password" placeholder="Please confirm your password" required>
+        <input type="password" name="confirm" class="password" autocomplete="off" placeholder="Please confirm your password" required>
       </div>
       <div>
         <input type="submit" name="submit" value="register">
