--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <h1>Registration form</h1>
-    <form action="/" id="resgistration_form" method="GET" name="resgistration_form">
+    <form action="/" id="register_form" method="GET" name="register_form">
       <div id="message"></div>
       <label for="username">User Name:</label>
       <div class="underline">
@@ -27,7 +27,7 @@
       </div>
       <label for="confirm">Confirmation:</label>
       <div class="underline">
-        <input type="password" name="confirm" class="password" autocomplete="off" placeholder="Please confirm your password" value="a" required>
+        <input type="password" name="confirm_password" class="password" autocomplete="off" placeholder="Please confirm your password" value="a" required>
       </div>
       <div>
         <input type="submit" name="submit" value="register">
