feat: managing passwords errors and display

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div id="message"></div>
       <label for="username">User Name:</label>
       <div class="underline">
-        <input type="text" name="username" class="username" autocomplete="off" placeholder="Enter your user name" value='username' required>
+        <input type="text" name="username" class="username" autocomplete="off" placeholder="Enter your user name" value='Drozerah' required>
       </div>
       <label for="email">Email:</label>
       <div class="underline">
-        <input type="text" name="email" class="email" autocomplete="off" placeholder="Enter your email address" value='email' required>
+        <input type="text" name="email" class="email" autocomplete="off" placeholder="Enter your email address" value='drozerah@mail.com' required>
       </div>
       <label for="password">Password:</label>
       <div class="underline">
@@ -27,7 +27,7 @@
       </div>
       <label for="confirm">Confirmation:</label>
       <div class="underline">
-        <input type="password" name="confirm_password" class="password" autocomplete="off" placeholder="Please confirm your password" value="a" required>
+        <input type="password" name="confirm_password" class="password" autocomplete="off" placeholder="Please confirm your password" value="b" required>
       </div>
       <div>
         <input type="submit" name="submit" value="register">
