test: remove HTML default for values

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
       <div id="message"></div>
       <label for="username">User Name:</label>
       <div class="underline">
-        <input type="text" name="username" class="username" autocomplete="off" placeholder="Enter your user name" value='Drozerah' required>
+        <input type="text" name="username" class="username" autocomplete="off" placeholder="Enter your user name" value='' required>
       </div>
       <label for="email">Email:</label>
       <div class="underline">
-        <input type="text" name="email" class="email" autocomplete="off" placeholder="Enter your email address" value='drozerah@mail.com' required>
+        <input type="text" name="email" class="email" autocomplete="off" placeholder="Enter your email address" value='' required>
       </div>
       <label for="password">Password:</label>
       <div class="underline">
-        <input type="password" name="password" class="password" autocomplete="off" placeholder="Enter your password" value="a" required>
+        <input type="password" name="password" class="password" autocomplete="off" placeholder="Enter your password" value="" required>
         <i id="visibility" class="noSelect material-icons">visibility</i>
       </div>
       <label for="confirm">Confirmation:</label>
       <div class="underline">
-        <input type="password" name="confirm_password" class="password" autocomplete="off" placeholder="Please confirm your password" value="b" required>
+        <input type="password" name="confirm_password" class="password" autocomplete="off" placeholder="Please confirm your password" value="" required>
       </div>
       <div>
         <input type="submit" name="submit" value="register">
