--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </div>
     </form>
   </main>
+  <script src="./lib/validator.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
