--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="src/css/main.css">
   <title>Registration Form</title>
 </head>
 <body>
@@ -34,7 +34,6 @@
       </div>
     </form>
   </main>
-  <script src="./lib/validator.js"></script>
-  <script src="app.js"></script>
+  <script src="src/js/bundle.js"></script>
 </body>
 </html>
